# devunit-gen

./: Makefile  README.md  pyproject.toml
src/devunit_gen/: __init__.py  __main__.py  devunit_gen.py
tests/: conftest.py  test_devunit_gen.py
