[project]
name = "devunit-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OpenCode Agent", email = "agent@yourdomain.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
devunit-gen = "devunit_gen:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=9.1.1",
    "refurb>=2.3.1",
    "ruff>=0.15.19",
    "ty>=0.0.53",
    "vulture>=2.16",
]
